// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Play-Options Play-Options: --debug 1`] = `
"Now Playing: Sample Game by Lars
Type :quit to exit the game.

Hello, world!
Debug mode activated.

You just said hey there!.
What a cool word!
Prior command list: []

You've said 1 in total.
Here's a random string for you: sWCjwirFoT

You just said foo.
What a cool word!
Prior command list: [\\"hey there!\\"]
Recently, you said hey there!.
You've said 2 in total.
Here's a random string for you: dsOSJenvKp

You just said asdfjf.
What a cool word!
Prior command list: [\\"hey there!\\",\\"foo\\"]
Recently, you said foo and hey there!
You've said 3 in total.
Here's a random string for you: WCjwirFoTm
"
`;

exports[`Play-Options Play-Options: --showMinor false 1`] = `
"Now Playing: Sample Game by Lars
Type :quit to exit the game.

Hello, world!

You just said hey there!.

You've said 1 in total.
Here's a random string for you: apMNIdZZxr

You just said foo.
Recently, you said hey there!.
You've said 2 in total.
Here's a random string for you: HBROjdrGuZ

You just said asdfjf.
Recently, you said foo and hey there!
You've said 3 in total.
Here's a random string for you: pMNIdZZxrj
"
`;
